<resources>
    <!--  Eye Dropdown  -->
    <string-array name="eye_dropdown_list">
        <item>Left Eye</item>
        <item>Right Eye</item>
    </string-array>

    <string name="app_name">Barcode</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your Password</string>
    <string name="username">UserId</string>
    <string name="username_hint">Enter your UserId</string>
    <string name="center">Center Id</string>
    <string name="center_hint">Enter your CenterId</string>
    <string name="resetpassword">Reset Password</string>
    <string name="login">LogIn</string>
    <string name="msg_center">Enter your center Id</string>
    <string name="msg_user">Enter your user Id</string>
    <string name="msg_pwd">Enter your Password</string>
    <string name="scan">Scan Barcode</string>
    <string name="enter_manual_roll_no">Enter Manual Roll No</string>
    <string name="logout">Logout</string>
    <string name="label_hint">Enter Roll Number</string>
    <string name="label_tile">Roll Number</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_submit">Submit</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="lab_number">Lab No</string>
    <string name="time">Exam Time</string>
    <string name="occurrence">Occurrence</string>
    <string name="seat_number">Seat No</string>
    <string name="application_number">Application No.</string>
    <string name="center_number">Center Name</string>
    <string name="exam_time">Exam Time</string>
    <string name="reporting_time">Reporting Time</string>
    <string name="catogory">Category</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="welcome_to_examination">Welcome To Examination Center</string>
    <string name="accept">Accept</string>
    <string name="sync_all_data">SYNC ALL DATA</string>
    <string name="error_msg">Something went wrong..!</string>\
    <string name="internet_connection">Please Check your internet connection…!</string>
    <string name="input_valid_number">Please input valid number…!</string>
    <string name="data_sync_msg">Data sync Successfully</string>
    <string name="data_sc_msg">  Data upload successfully</string>
    <string name="save_to_server">SAVE TO SERVER</string>
    <string name="student_aviality">STUDENT ATTENDANCE</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_screen_message">Enter user id and password to login</string>
    <string name="center_id_label">Center ID</string>
    <string name="center_id_caps_label">CENTER ID</string>
    <string name="user_id_caps_label">USER ID</string>
    <string name="remember_me_label">Remember Me</string>
    <string name="login_btn_label">LOGIN</string>
    <string name="password_caps_label">PASSWORD</string>
    <string name="scan_barcode_btn_label">SCAN BARCODE</string>
    <string name="or">OR</string>
    <string name="roll_number_label">Enter Roll Number</string>
    <string name="more_options">More Options</string>
    <string name="data_not_found">Data not found....!</string>
    <string name="exit">Are you sure, you want to exit?</string>
    <string name="centre_code">Centre Code</string>
    <string name="exam_name">Exam</string>
    <string name="modules">Authentication Types</string>
    <string name="deny_logout">Deny &amp; Logout</string>
    <string name="add_to_centre">Add Candidate To Centre</string>
    <string name="candidate_status">Candidate Status</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="barcode_status">Bar Code Status</string>
    <string name="face_status">Face Status</string>
    <string name="register">Register</string>
    <string name="bypass">Bypass</string>
    <string name="iris_status">Iris Status</string>
    <string name="continue_label">Continue</string>
    <string name="verify">Verify</string>
    <string name="bypass_authentication">Bypass Authentication</string>
    <string name="bypass_auth_type">Bypass Auth Type</string>
    <string name="bypass_reason">Bypass Reason</string>
    <string name="proof_image">Proof Image</string>
    <string name="settings_title">Settings</string>
    <string name="error">Error</string>
    <string name="ok">Okay</string>
    <string name="warning">Warning</string>
    <string name="sdkinit_error">Cannot configure the IriTech SDK. The application may not run properly.</string>
    <string name="device_incompatible_error">Your device is incompatible with our app. Try updating android version to Marshmallow or above.</string>
    <string name="device_disconnected">IriShield is disconnected.</string>
    <string name="opendevice_notfound">Device not found. Scanning device ...</string>
    <string name="opendevice_version_incompatible"><![CDATA[This application is not compatible with IriShield device version <= 2.24]]></string>
    <string name="connection_restart_ask">The program cannot run properly due to connection problem.We suggest to do the following actions:\n\t1. Unplug and plugin the device.\n\t2. Restart the application</string>
    <string name="connection_failed">Device connection failed.</string>
    <string name="opendevice_connected">Device connected</string>
    <string name="opendevice_accessdenied">Device access denied. Scanning device ...</string>
    <string name="opendevice_failed">Open device failed. Scanning device ...</string>
    <string name="automatic">Automatic</string>
    <string name="sleep_mode">Sleep Mode</string>
    <string name="sleep_after">Sleep After</string>
    <string name="secs">sec</string>
    <string name="apply">Apply</string>
    <string name="manual">Manual</string>
    <string name="standby">Stand By</string>
    <string name="sleep">Sleep</string>
    <string name="deep_sleep">Deep Sleep</string>
    <string name="serial">Device Serial</string>
    <string name="cam_not_init">Failed to initialize the camera.</string>
    <string name="cam_ready">Camera ready</string>
    <string name="config_get_failed">Failed to get current setting values.</string>
    <string name="settings_autocapture">Auto Capture</string>
    <string name="settings_correct_number">Please correct count number in settings menu !</string>
    <string name="settings_correct_number_timeout">Please correct timeout in settings menu !</string>
    <string name="settings_pre_default">Best</string>
    <string name="stream_disable">Streamming function is disabled in the device !</string>
    <string name="msg_cannot_change_stream_scale">Cannot set stream scale for device!</string>
    <string name="cannot_create_stream_folder">Cannot create stream image directory.</string>
    <string name="capture_eyey_detected">Eye Detected</string>
    <string name="capture_finished">Capture Finished!</string>
    <string name="right_eye">Right Eye</string>
    <string name="total_score">Total Score</string>
    <string name="usable_area">Usable Area</string>
    <string name="left_eye">Left Eye</string>
    <string name="unknown_eye">Unknown Eye</string>
    <string name="capture_noqualified">No frame qualified !\\</string>
    <string name="deny">Deny</string>
    <string name="iris_image">Iris Image</string>
    <string name="verify_candidate">Verify Candidate</string>
    <string name="face_image">Face Image</string>
    <string name="facify_scan">Facify Scan</string>
    <string name="quickscan">QuickScan</string>
    <string name="confidence">Confidence</string>

</resources>